@@ -1,4 +1,4 @@
-# $NetBSD: INSTALL,v 1.2 2003/08/30 19:11:57 jlam Exp $
+# $NetBSD: INSTALL,v 1.3 2005/01/11 05:12:56 hamajima Exp $
 
 case ${STAGE} in
 POST-INSTALL)
@@ -9,10 +9,11 @@ POST-INSTALL)
 	# that sparc64 a.out compatibility lives in /emul/aout, not /emul/netbsd32.
 	#
 	create_emul_symlink=0
-	if [ "${MACHINE_ARCH}" = "sparc64" ]
-	then
-		create_emul_symlink=1
-	fi
+	case ${MACHINE_ARCH} in
+		sparc64 | x86_64)
+			create_emul_symlink=1
+			;;
+	esac
 
 	if [ ${create_emul_symlink} = 1 ]
 	then
