@@ -1,0 +1,27 @@
+@comment $NetBSD: PLIST.sparc,v 1.1 2005/01/11 05:12:56 hamajima Exp $
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libICE.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libICE.so.6.3
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libPEX5.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libPEX5.so.6.0
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libSM.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libSM.so.6.0
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libX11.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libX11.so.6.1
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXIE.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXIE.so.6.0
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXaw.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXaw.so.6.1
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXext.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXext.so.6.3
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXi.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXi.so.6.0
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXmu.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXmu.so.6.0
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXp.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXp.so.6.2
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXt.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXt.so.6.0
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXtst.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXtst.so.6.1
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/liboldX.so.6
+${COMPAT_EMULSUBDIR}/usr/X11R6/lib/liboldX.so.6.0
